test/tests/errors/error-jumpout-not-in-func.sm
// true
// false
/**/
/**/

program {
    func a(b) {
        b + j(5)
    }

    var x = jumpout j in a(1);
}